--- a/README
+++ b/README
@@ -9,3 +9,7 @@ WARNING: This code is poorly documented, I will update the readme with additiona
 what I have done here.
 
 Check out Alloy here - https://github.com/appcelerator/alloy
+
+See other example(s) here
+
+Samples with Titanium Alloy faking navigation controller and opening multiple windows - http://bit.ly/PwtznT
